# cpp-mini-projects

./: .gitignore  CMakeLists.txt
calculator/: CMakeLists.txt  calculator.cpp  calculator.h
file_encryptor/: CMakeLists.txt  encryptor.cpp  encryptor.h  main.cpp  test_encryptor.cpp
networking/chat/: CMakeLists.txt
networking/chat/client/: chat_client.cpp
networking/chat/server/: chat_server.cpp
networking/chat/threading/: TaskQueue.hpp  ThreadPool.cpp  ThreadPool.hpp
networking/port_scanner/: CMakeLists.txt  main.cpp
networking/udp_echo/: CMakeLists.txt  udp_client.cpp  udp_server.cpp
spaceship/: CMakeLists.txt
spaceship/headers/: Bullet.h  Enemy.h  EnemyManager.h  Player.h
spaceship/src/: Enemy.cpp  EnemyManager.cpp  Main.cpp  Player.cpp
tic-tac-toe/: CMakeLists.txt
tic-tac-toe/headers/: board.h
tic-tac-toe/src/: board.cpp  main.cpp
